--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="base-url" content="http://wsp.azurewebsites.net" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
-    <meta name="version" content="1.1.56" />
+    <meta name="version" content="1.1.57" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0,target-densitydpi=device-dpi">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -22,7 +22,11 @@
     <!--<button class="set">SET IMAGE!!!</button>
     <img class="host"/>-->
     <div class="content-container" >
-        <div class="loading" ng-hide="true">אנו אוספים נתונים עבורך, אנא המתן/י</div>
+        <div class="loading" ng-hide="true">
+            <div class="message">
+                אנו אוספים נתונים עבורך, אנא המתן/י
+            </div>
+        </div>
 
         <app-header></app-header>
 
