--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -1,10 +1,6 @@
 ﻿<div class="product-info">
     <div class="comparison-check">
-        <div ng-show="comparisonEnabled" class="check-box" ng-class="{'checked': checked }"></div>
-        <div ng-show="comparisonEnabled" class="check-box-text" ng-click="check($event)">
-            {{ !checked ?'לחץ להשוואה':'בטל השוואה' }}
-        </div>
-
+        <div ng-show="comparisonEnabled" class="check-box" ng-class="{'checked': checked }" ng-click="check($event)"></div>
     </div>
     <img class="productImg" ng-src="{{ product.imageUrl }}" />
 
@@ -29,11 +25,11 @@
     <div ng-if="product.viewOptions.rating == 2">מס' תשלומים: {{ product.paymentsNum}} <span class="payments" ng-if="product.paymentsNum < 36">(עד 36 תשלומים כולל ריבית)</span></div>
     <div ng-if="product.viewOptions.rating == 1">נרכשו: {{ product.buyersCount}}</div>
 
-    <div class="price" ng-if="product.showPrice">
+    <div class="price" ng-if="product.viewOptions.showPrice">
         <span>רק </span>
         <b>{{product.price|number:0}} ₪</b>
     </div>
-    <div class="price average-price" ng-if="product.displayAveragePrice">
+    <div class="price average-price" ng-if="product.viewOptions.displayAveragePrice">
         {{product.averagePrice|number:0}} ₪
     </div>
     <span class="details-text">{{product.detailsText}}</span>
