--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <meta name="base-url" content="http://wsp.azurewebsites.net" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
-    <meta name="version" content="1.1.59" />
+    <meta name="version" content="1.1.60" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0,target-densitydpi=device-dpi">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -56,7 +56,7 @@
 
     <script src="lib/simple/simple.js"></script>
     <!-- Services -->
-    <script src="lib/simple/services/utils.js"></script>
+    <!--<script src="lib/simple/services/utils.js"></script>
     <script src="lib/simple/services/file-utils.js"></script>
     <script src="lib/simple/services/attachments-manager.js"></script>
     <script src="lib/simple/services/phonegap.js"></script>
@@ -67,24 +67,23 @@
     <script src="lib/simple/services/queue-manager.js"></script>
     <script src="lib/simple/services/state-manager.js"></script>
     <script src="lib/simple/services/geo-location.js"></script>
-    <script src="lib/simple/services/storage-service.js"></script>
     <script src="lib/simple/services/language.js"></script>
-    <script src="lib/simple/services/text-resources.js"></script>
+    <script src="lib/simple/services/text-resources.js"></script>-->
+    <script src="lib/simple/services/storage-service.js"></script>
     <script src="lib/simple/services/safe-apply.js"></script>
     <script src="lib/simple/services/network-service.js"></script>
     <script src="lib/simple/services/network-manager.js"></script>
-    <script src="lib/simple/services/configuration.js"></script>
     <script src="lib/simple/services/alert-service.js"></script>
     <script src="lib/simple/services/analytics-service.js"></script>
-    <!-- Filters -->
+    <!-- Filters - ->
     <script src="lib/simple/filters/localize.js"></script>
     <script src="lib/simple/filters/skip.js"></script>
     <script src="lib/simple/filters/gps-location.js"></script>
     <script src="lib/simple/filters/entity-description.js"></script>
-    <!-- Directives -->
+    <!-- Directives - ->
     <script src="lib/simple/directives/simple-nav.js"></script>
     <script src="lib/simple/directives/local-cache.js"></script>
-
+        -->
     <script src="lib/simple/simple-module.js"></script>
 
 
@@ -123,7 +122,6 @@
 
     <script src="app/js/app.js"></script>
     <script src="app/js/routes.js"></script>
-    <script src="app/js/resources.js"></script>
 
     <script>
         function onDeviceReady() {
