--- a/main.html
+++ b/main.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Walla! שופס</title>
     <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
-    <meta name="b-ase-url" content="http://www.wallashops.co.il" />
-    <meta name="base-url" content="http://wsp.azurewebsites.net" />
+    <meta name="base-url" content="http://www.wallashops.co.il" />
+    <meta name="b-ase-url" content="http://wsp.azurewebsites.net" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
-    <meta name="version" content="1.1.60" />
+    <meta name="version" content="1.1.61" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0,target-densitydpi=device-dpi">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
