--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Walla! שופס</title>
     <!--<meta name="base-url" content="http://www.wallashops.co.il"/>-->
-    <meta name="base-url" content="http://www.wallashops.co.il" />
-    <meta name="b-ase-url" content="http://wsp.azurewebsites.net" />
+    <meta name="b-ase-url" content="http://www.wallashops.co.il" />
+    <meta name="base-url" content="http://wsp.azurewebsites.net" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
     <meta name="version" content="1.1.61" />
@@ -54,41 +54,12 @@
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/angular-strap/angular-strap.js"></script>
 
-    <script src="lib/simple/simple.js"></script>
-    <!-- Services -->
-    <!--<script src="lib/simple/services/utils.js"></script>
-    <script src="lib/simple/services/file-utils.js"></script>
-    <script src="lib/simple/services/attachments-manager.js"></script>
-    <script src="lib/simple/services/phonegap.js"></script>
-    <script src="lib/simple/services/null-camera-service.js"></script>
-    <script src="lib/simple/services/phonegap-camera-service.js"></script>
-    <script src="lib/simple/services/phonegap-remote-storage.js"></script>
-    <script src="lib/simple/services/phonegap-file-manager.js"></script>
-    <script src="lib/simple/services/queue-manager.js"></script>
-    <script src="lib/simple/services/state-manager.js"></script>
-    <script src="lib/simple/services/geo-location.js"></script>
-    <script src="lib/simple/services/language.js"></script>
-    <script src="lib/simple/services/text-resources.js"></script>-->
-    <script src="lib/simple/services/storage-service.js"></script>
-    <script src="lib/simple/services/safe-apply.js"></script>
-    <script src="lib/simple/services/network-service.js"></script>
-    <script src="lib/simple/services/network-manager.js"></script>
-    <script src="lib/simple/services/alert-service.js"></script>
-    <script src="lib/simple/services/analytics-service.js"></script>
-    <!-- Filters - ->
-    <script src="lib/simple/filters/localize.js"></script>
-    <script src="lib/simple/filters/skip.js"></script>
-    <script src="lib/simple/filters/gps-location.js"></script>
-    <script src="lib/simple/filters/entity-description.js"></script>
-    <!-- Directives - ->
-    <script src="lib/simple/directives/simple-nav.js"></script>
-    <script src="lib/simple/directives/local-cache.js"></script>
-        -->
-    <script src="lib/simple/simple-module.js"></script>
-
+    
 
     <script src="app/js/wallashops.js"></script>
     <!-- Services -->
+    <script src="lib/simple/services/network-manager.js"></script>
+    <script src="lib/simple/services/network-service.js"></script>
     <script src="app/js/services/config.js"></script>
     <script src="app/js/services/category-service.js"></script>
     <script src="app/js/services/promotions-service.js"></script>
