--- a/app/js/directives/products-list-items/products-list-items.html
+++ b/app/js/directives/products-list-items/products-list-items.html
@@ -1,4 +1,4 @@
-﻿<div class="products-list clear" n-g-style="{'width': (240*products.length) + 'px'}">
+﻿<div class="products-list clear" >
     <product-pane ng-repeat="product in products"
                   product="product"
                   comparison-enabled="comparisonEnabled"
