--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -10,37 +10,28 @@
     </div>
 
     <div class="product-info">
-        <img class="productImg" ng-src="{{ product.imageUrl }}" />
+        <img class="productImg"  />
 
         <div class="icons">
             <div class="image-icon" ng-repeat="icon in product.icons">
                 <div class="discount-icon" ng-if="!icon.id">
                     <div class="icon-text">{{ product.discountAmount }}<span>%</span>  הנחה </div>
                 </div>
-
-                <img ng-hide="loading" ng-src="{{icon.imageUrl}}" />
+                
+                <img ng-src="{{icon.imageUrl}}" />
             </div>
         </div>
 
-        <div class="title">{{ product.title }}</div>
-        <div class="subtitle">{{ product.subTitle }}</div>
+        <div class="title"></div>
+        <div class="subtitle"></div>
 
-        <div class="rating" ng-if="product.viewOptions.ratingImageUrl">
-            <img ng-src="{{product.viewOptions.ratingImageUrl}}" />
-            <span class="raters-number">({{product.ratersNumber}})</span>
+        <div class="rating" >
+            <div class="stars" style="display:none">
+                <img />
+                <span class="raters-number"></span>
+            </div>
         </div>
-
-        <div ng-if="product.viewOptions.rating == 2">מס' תשלומים: {{ product.paymentsNum}} <span class="payments" ng-if="product.paymentsNum < 36">(עד 36 תשלומים כולל ריבית)</span></div>
-        <div ng-if="product.viewOptions.rating == 1">נרכשו: {{ product.buyersCount}}</div>
-
-        <div class="price" ng-if="product.viewOptions.showPrice">
-            <span>רק </span>
-            <b data-field="price">{{product.price|number:0}} ₪</b>
-        </div>
-        <div class="price average-price" ng-if="product.viewOptions.displayAveragePrice" data-field="average-price">
-            {{product.averagePrice|number:0}} ₪
-        </div>
-        <span class="details-text">{{product.detailsText}}</span>
+        <span class="details-text"></span>
         <div class="details"></div>
     </div>
     <div class="product-separator"></div>
