--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <meta name="base-url" content="http://wsp.azurewebsites.net" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
-    <meta name="version" content="1.1.61" />
+    <meta name="version" content="1.1.62" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0,target-densitydpi=device-dpi">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -39,17 +39,17 @@
 
 
 
-    <script src="lib/fastclick/fastclick.js"></script>
+    <!--<script src="lib/fastclick/fastclick.js"></script>-->
     <script src="lib/analytics/ga_local.js"></script>
     <script src="lib/underscore/underscore.js"></script>
     <!--<script src="lib/jquery/jquery-2.0.3.min.js"></script>-->
     <script src="lib/jquery/jquery.2.1.0.js"></script>
     <script src="lib/moment/moment.min.js"></script>
 
-    <script src="lib/angular/angular.js"></script>
-    <script src="lib/angular/angular-route.min.js"></script>
-    <script src="lib/angular/angular-touch.min.js"></script>
-    <script src="lib/angular/angular-animate.min.js"></script>
+    <script src="lib/angular-1.3/angular.min.js"></script>
+    <script src="lib/angular-1.3/angular-route.min.js"></script>
+    <script src="lib/angular-1.3/angular-touch.min.js"></script>
+    <script src="lib/angular-1.3/angular-animate.min.js"></script>
 
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/angular-strap/angular-strap.js"></script>
@@ -99,23 +99,23 @@
             if (typeof StatusBar !== "undefined") {
                 StatusBar.overlaysWebView(false);
             }
-            angular.element(document).ready(function () {
-                setTimeout(function () {
-                    angular.bootstrap(document, ['WallaShops']);
-                    FastClick.attach(document.body);
-                    if (navigator.splashscreen) {
-                        navigator.splashscreen.hide();
-                    }
+            //angular.element(document).ready(function () {
+            //    setTimeout(function () {
+            //        angular.bootstrap(document, ['WallaShops']);
+            //        FastClick.attach(document.body);
+            //        if (navigator.splashscreen) {
+            //            navigator.splashscreen.hide();
+            //        }
 
-                }, 700);
-            });
+            //    }, 700);
+            //});
         }
 
-        if (navigator.userAgent.match(/(iPhone|iPod|iPad|Android|BlackBerry|IEMobile)/)) {
+        //if (navigator.userAgent.match(/(iPhone|iPod|iPad|Android|BlackBerry|IEMobile)/)) {
             document.addEventListener("deviceready", onDeviceReady, false);
-        } else {
-            onDeviceReady(); //this is the browser
-        }
+        //} else {
+        //    onDeviceReady(); //this is the browser
+        //}
     </script>
 
 </body>
