--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="he-IL">
+<html lang="he-IL" >
 <head>
     <meta charset="utf-8">
     <title>Walla! שופס</title>
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="phonegap.js"></script>
 
 </head>
-<body class="rtl swipe-animations-enabled" ng-controller="AppCtrl">
+<body class="rtl swipe-animations-enabled" ng-app="WallaShops" ng-controller="AppCtrl">
     <!--<button class="set">SET IMAGE!!!</button>
     <img class="host"/>-->
     <div class="content-container">
@@ -54,7 +54,7 @@
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/angular-strap/angular-strap.js"></script>
 
-    
+
 
     <script src="app/js/wallashops.js"></script>
     <!-- Services -->
@@ -112,7 +112,7 @@
         }
 
         //if (navigator.userAgent.match(/(iPhone|iPod|iPad|Android|BlackBerry|IEMobile)/)) {
-            document.addEventListener("deviceready", onDeviceReady, false);
+        document.addEventListener("deviceready", onDeviceReady, false);
         //} else {
         //    onDeviceReady(); //this is the browser
         //}
@@ -123,3 +123,4 @@
 
 
 </html>
+
