--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <meta name="base-url" content="http://me.simpl.co.il/ws" />
     <meta name="ws-url" content="http://www.wallashops.co.il">
     <meta name="auto-close-at-level" content="2">
-    <meta name="version" content="1.1.66" />
+    <meta name="version" content="1.1.68" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0,target-densitydpi=device-dpi">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/rtl/css/bootstrap.rtl.css" />
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -100,16 +100,16 @@
             if (typeof StatusBar !== "undefined") {
                 StatusBar.overlaysWebView(false);
             }
-            //angular.element(document).ready(function () {
-            //    setTimeout(function () {
-            //        angular.bootstrap(document, ['WallaShops']);
-            //        FastClick.attach(document.body);
-            //        if (navigator.splashscreen) {
-            //            navigator.splashscreen.hide();
-            //        }
+            angular.element(document).ready(function () {
+                setTimeout(function () {
+                    //angular.bootstrap(document, ['WallaShops']);
+                    FastClick.attach(document.body);
+                    if (navigator.splashscreen) {
+                        navigator.splashscreen.hide();
+                    }
 
-            //    }, 700);
-            //});
+                }, 700);
+            });
         }
 
         //if (navigator.userAgent.match(/(iPhone|iPod|iPad|Android|BlackBerry|IEMobile)/)) {
