--- a/app/js/directives/product-pane/product-pane.html
+++ b/app/js/directives/product-pane/product-pane.html
@@ -17,6 +17,7 @@
         </div>
         <span class="details-text"></span>
         <div class="details"></div>
+        <div class="price"></div>
     </div>
     <div class="product-separator"></div>
 </div>
