--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -9,7 +9,16 @@
         </div>
         <div class="right-buffer"></div>
         <div class="header-category">
-            <ws-categories-menu-trigger></ws-categories-menu-trigger>
+             
+                <div class="menu-button">
+                <button class="category" ng-click="toggleMenu()">
+                    <span>לפי קטגוריה</span>
+                    <i class="fa fa-filter ng-hide" ng-show="isFiltered"></i>
+                    <i class="fa fa-caret-down" ng-show="!isFiltered"></i>
+                </button>
+                </div>
+            <app-menu></app-menu>
+             <!--<ws-categories-menu-trigger></ws-categories-menu-trigger>-->
 
         </div>
         <div class="right-buffer"></div>
@@ -59,6 +68,7 @@
         </div>
 
     </div>
-
+    
 </header>
+
 
