--- a/app/js/directives/app-header/app-header.html
+++ b/app/js/directives/app-header/app-header.html
@@ -27,7 +27,7 @@
         <div class="search-inner">
             <form ng-submit="search()">
                 <div class="search-input">
-                    <input type="text" placeholder="מה תרצו לשופס?" ng-model="searchTerm" />
+                    <input type="text" placeholder="מה תרצו לשופס?" ng-model="searchTerm" maxlength="50"/>
                 </div>
                 <input type="submit" class="search-button" value="חפש" />
 
